Made Play Again and High Scores buttons hidden on default, visible on initials submit. Customized final score message based on score. Hid timer after all questions answered correctly.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -76,6 +76,10 @@ header {
   height: 2px;
 }
 
+.hideDiv1, .hideDiv2 {
+  visibility: hidden;
+}
+
 .btn, button {
   border: none;
   background-color: rgb(255, 111, 195);
